# mozc-cmake

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: check.yml
base/: CMakeLists.txt
client/: CMakeLists.txt
cmake/: Macros.cmake
composer/: CMakeLists.txt
config/: CMakeLists.txt
converter/: CMakeLists.txt
data_manager/: CMakeLists.txt
data_manager/oss/: CMakeLists.txt
dictionary/: CMakeLists.txt
engine/: CMakeLists.txt
fcitx/: CMakeLists.txt
gui/: CMakeLists.txt
gui/about_dialog/: CMakeLists.txt
gui/base/: CMakeLists.txt
gui/config_dialog/: CMakeLists.txt
gui/dictionary_tool/: CMakeLists.txt
gui/error_message_dialog/: CMakeLists.txt
gui/tool/: CMakeLists.txt
gui/word_register_dialog/: CMakeLists.txt
ipc/: CMakeLists.txt
prediction/: CMakeLists.txt
protocol/: CMakeLists.txt
rewriter/: CMakeLists.txt
server/: CMakeLists.txt
session/: CMakeLists.txt
storage/: CMakeLists.txt
transliteration/: CMakeLists.txt
usage_stats/: CMakeLists.txt
